--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "spotify-web-playwright",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "prepare": "husky"
   },
@@ -21,9 +20,7 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
   },
-  "dependencies": {
-    "dotenv": "^16.4.5"
-  },
+  "dependencies": {},
   "lint-staged": {
     "*": "prettier --ignore-unknown --write"
   }
